force-app/main/default/objects/Participant_Entity__c/Participant_Entity__c.object-meta.xml
<CustomObject>
    <label>Participant - Entity</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Participant Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants - Entity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>