force-app/main/default/objects/Participant_Entity__c/fields/Address_Ty_e__c.field-meta.xml
<CustomField>
    <fullName>Address_Ty_e__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>