force-app/main/default/objects/Participant_Entity__c/fields/Contact_Person_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Title__c</fullName>
    <label>Contact Person Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>