force-app/main/default/objects/Participant_Entity__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>Contact Person First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>