force-app/main/default/objects/Participant_Entity__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Contract Person Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>