force-app/main/default/objects/Participant_Entity__c/fields/Phone_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Phone_Alternate__c</fullName>
    <label>Land Phone</label>
    <type>Phone</type>
</CustomField>