force-app/main/default/objects/Participant_Entity__c/fields/Phone_Primary__c.field-meta.xml
<CustomField>
    <fullName>Phone_Primary__c</fullName>
    <label>Cell Number</label>
    <type>Phone</type>
</CustomField>