force-app/main/default/objects/Participant_Entity__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>