force-app/main/default/objects/Participant_Entity__c/fields/Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Name__c</fullName>
    <label>Primary Name</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>