force-app/main/default/objects/Participant_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Middle_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone_Primary__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>